--- a/contact.htm
+++ b/contact.htm
@@ -4,6 +4,8 @@
 
 
 
+
+  
   
   
   
@@ -11,6 +13,8 @@
 
 
 
+
+  
   
   
   
@@ -18,6 +22,8 @@
 
 
 
+
+  
   
   
   
@@ -25,6 +31,8 @@
 
 
 
+
+  
   
   
   
@@ -32,6 +40,8 @@
 
 
 
+
+  
   
   
   
@@ -39,6 +49,8 @@
 
 
 
+
+  
   
   
   
@@ -46,6 +58,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -57,6 +72,7 @@
   
   
   
+  
   <meta content="Pierre Dubois English Page" name="description">
 </head>
 
@@ -65,7 +81,9 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><font size="4">&nbsp;</font></p>
+
 
 
 
@@ -73,10 +91,12 @@
 
 
 
+
 &nbsp;Professor
 of Economics,&nbsp;<a style="color: rgb(44, 19, 209);" target="_blank" href="http://tse-fr.eu/">Toulouse
 School of Economics</a><span style="color: rgb(0, 0, 0);"></span>
 <div><br>
+
 
 
 
@@ -88,11 +108,13 @@ European Economic Association</a></span>
 
 
 
+
 <div>
 &nbsp;Director <a style="color: rgb(44, 19, 209);" href="https://www.tse-fr.eu/health" target="_blank">TSE
 Health Center</a>
 (2021-)
 <font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;<br>
+
 
 
 
@@ -102,9 +124,11 @@ Universitaire de France</a>
 
 
 
+
 <div>&nbsp;<a href="https://cepr.org/research/programme-areas/industrial-organization" target="_blank">CEPR</a>
 Industrial Organization Program Director
 (2022-)<br>
+
 
 
 
@@ -113,7 +137,9 @@ Industrial Organization Program Director
 
 
 
+
 <br>
+
 
 
 
@@ -123,14 +149,17 @@ Research Fellow</a>
 
 
 
+
 <div><span style="color: rgb(0, 0, 0);">&nbsp;</span><a style="text-decoration: none; color: rgb(0, 0, 0);" href="http://www.cepr.org/" target="_blank">CEPR</a>
 Research Fellow <br>
+
 
 
 
 <span style="font-family: Calibri;">&nbsp;</span>Fellow
 of the <a style="text-decoration: none; color: rgb(0, 0, 0);" href="https://www.econometricsociety.org/society/organization-and-governance/fellows/current" target="_blank">Econometric Society</a>
 </div>
+
 
 
 
@@ -141,6 +170,7 @@ Association of Applied Econometrics</a>
 
 
 
+
 <div><span style="font-family: Calibri;">&nbsp;</span>Fellow
 of the <a style="text-decoration: none; color: rgb(0, 0, 0);" href="https://www.eeassoc.org/fellows" target="_blank">European
 Economic
@@ -148,19 +178,25 @@ Association</a></div>
 
 
 
+
 <div> &nbsp;<a style="text-decoration: none; color: rgb(0, 0, 0);" href="https://www.eeassoc.org/fellows" target="_blank">European
 Economic
 Association</a> council member (2026-2030)<br>
 
+
 </div>
 
 
 
-<div>&nbsp;<a href="https://www.econometricsociety.org/society/news/Congratulations-to-the-Societys-Newly-Elected-RSC-Members-2025-12-05.html" target="_blank">European Regional Standing Committee of the Econometric Society</a> (2026&ndash;2029)<br>
+
+<div>&nbsp;<a style="color: rgb(0, 0, 0);" href="https://www.econometricsociety.org/society/news/Congratulations-to-the-Societys-Newly-Elected-RSC-Members-2025-12-05.html" target="_blank">European Regional Standing Committee of the Econometric Society</a> (2026&ndash;2029)<br>
+<br>
+
 &nbsp;<span style="color: rgb(0, 0, 0); text-decoration: none;">Visiting
 Professor, Harvard University, Department of Economics
 (2015, 2019-2020)</span>
 </div>
+
 
 
 
@@ -170,9 +206,11 @@ Director of the Toulouse School of Economics (2015-2019)
 
 
 
+
 <div><span style="color: rgb(0, 0, 0);">&nbsp;</span><a style="text-decoration: none; color: rgb(0, 0, 0);" href="http://www.iufrance.fr/les-membres-de-liuf/membre/1140-pierre-dubois.html" target="_blank">Institut
 Universitaire de France</a> Junior
 Member (2011-2015)</div>
+
 
 
 
@@ -183,7 +221,9 @@ of Economics, Northwestern University (2010-2011)
 
 
 
+
 <div><span style="font-family: Calibri;"></span> &nbsp; &nbsp;</div>
+
 
 
 
@@ -194,9 +234,11 @@ Organization</a><span style="font-family: Calibri;">
 
 
 
+
 <div><span style="font-family: Calibri;">&nbsp;Associate
 Editor of <a style="text-decoration: none; color: rgb(0, 0, 0);" href="https://www.journals.elsevier.com/european-economic-review" target="_blank">European Economic Review</a>
 (2012-2023)</span></div>
+
 
 
 
@@ -207,9 +249,11 @@ and Statistics</a> (2009-)</span></div>
 
 
 
+
 <div><span style="font-family: Calibri;">
 &nbsp;E-mail:&nbsp;</span><a style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;" href="mailto:pierre.dubois@tse-fr.eu">pierre.dubois@tse-fr.eu</a>
 </div>
+
 
 
 
@@ -218,8 +262,10 @@ and Statistics</a> (2009-)</span></div>
 
 
 
+
 <div><a name="Research Interests">&nbsp;Research Interests</a>
 :</div>
+
 
 
 
@@ -228,13 +274,17 @@ Organization, Applied Microeconomics,&nbsp;Applied Econometrics</div>
 
 
 
+
 <div>
 &nbsp;Health
 Economics, Food Industry, Development<br>
 
+
 </div>
+
 <div><span style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;</span><font style="color: rgb(0, 0, 0); font-family: Calibri;"><a style="text-decoration: none; color: rgb(0, 0, 0);" href="cv_web.pdf" target="_blank">Complete
 CV</a></font></div>
+
 
 
 
@@ -242,7 +292,9 @@ CV</a></font></div>
 
 
 
+
 <div><font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;<a style="text-decoration: none; color: rgb(0, 0, 0);" href="http://scholar.google.fr/citations?user=6Eo7zF0AAAAJ&amp;hl=fr" target="_blank">Google Scholar Page</a></font></div>
+
 
 
 
@@ -251,8 +303,10 @@ CV</a></font></div>
 
 
 
+
 <div>Address:
 </div>
+
 
 
 
@@ -262,9 +316,11 @@ School of Economics
 
 
 
+
 <div>1
 Esplanade de l'Universit&eacute;
 </div>
+
 
 
 
@@ -274,11 +330,14 @@ Toulouse Cedex 06
 
 
 
+
 <div>France</div>
 
 
 
+
 <font style="font-family: Calibri;"><span style="text-decoration: underline;"><span style="font-weight: bold;"></span></span><br>
+
 
 
 
