--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -17,6 +17,8 @@
 
 
 
+
+  
   
   
   
@@ -50,6 +52,8 @@
 
 
 
+
+  
   
   
   
@@ -83,6 +87,8 @@
 
 
 
+
+  
   
   
   
@@ -116,6 +122,8 @@
 
 
 
+
+  
   
   
   
@@ -149,6 +157,8 @@
 
 
 
+
+  
   
   
   
@@ -182,6 +192,8 @@
 
 
 
+
+  
   
   
   
@@ -215,6 +227,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -269,6 +284,7 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><a name="Workingpapers"></a></i></p>
 
 
@@ -286,7 +302,9 @@
 
 
 
+
 <br>
+
 
 
 
@@ -321,7 +339,9 @@ papers:</i></p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><a name="IO"></a>&nbsp;</p>
+
 
 
 
@@ -355,8 +375,10 @@ papers:</i></p>
 
 
 
+
 <span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;&nbsp;
 "Pharmaceutical Advertising in Dynamic Equilibrium", with Ariel Pakes<br>
+
 
 
 
@@ -388,6 +410,7 @@ papers:</i></p>
 
 
 
+
 &nbsp;&nbsp;&nbsp; &nbsp;"Biologic Drugs and Learning by Doing" with L&eacute;a Bignon<br>
 
 
@@ -397,7 +420,9 @@ papers:</i></p>
 
 
 
+
 <br>
+
 
 
 
@@ -424,8 +449,10 @@ Prasad Mohapatra</span></span><span style="font-family: Calibri;"><span lang="EN
 
 
 
+
 </span></span>
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -461,7 +488,9 @@ with Paul-Henri Moisson and Jean Tirole<br>
 
 
 
+
 <br>
+
 
 
 
@@ -498,6 +527,7 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 <p class="MsoNormal" style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span style="font-family: Calibri;"><span lang="EN-US"><br>
 
 
@@ -515,7 +545,9 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 </span></span></p>
+
 
 
 
@@ -554,7 +586,9 @@ Pharmaceutical Industry</a>", with Gosia Majewska<o:p></o:p></span></p>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span style="font-style: italic;"></span></span><span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -594,7 +628,9 @@ and Shoshana Vasserman <br>
 
 
 
+
 <br>
+
 
 
 
@@ -630,8 +666,10 @@ Valentina Reig<br>
 
 
 
+
 </span></span><span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; <br>
+
 
 
 
@@ -653,7 +691,8 @@ Valentina Reig<br>
 Submissions:
 A Cross-Country
 Analysis of Supplemental
-Drug Approvals</a>" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el, revised and resubmit at <span style="font-style: italic;">Journal of Economics and Management Strategy</span><br>
+Drug Approvals</a>" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el, revise and resubmit at <span style="font-style: italic;">Journal of Economics and Management Strategy</span><br>
+
 
 
 
@@ -671,6 +710,7 @@ Drug Approvals</a>" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el, revised a
 
 
 <br>
+
 
 
 
@@ -711,7 +751,9 @@ Kyle <br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><br>
+
 
 
 
@@ -748,7 +790,9 @@ C&eacute;line Bonnet <br>
 
 
 
+
 <br>
+
 
 
 
@@ -785,8 +829,10 @@ Ligon, CEPR DP 7574<br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 <br>
+
 
 
 
@@ -822,6 +868,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span><span style="font-family: Calibri;"></span><br>
 
 
@@ -839,7 +886,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -874,6 +923,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span></span><span style="font-family: Calibri;"></span><br>
 
 
@@ -891,7 +941,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 &nbsp;</p>
+
 
 
 
@@ -926,7 +978,9 @@ resubmitted):<br>
 
 
 
+
 </span></span></span><br style="font-family: Calibri;">
+
 
 
 
@@ -967,7 +1021,9 @@ CEPR DP 7847<br>
 
 
 
+
 <br>
+
 
 
 
@@ -1006,7 +1062,9 @@ Statistics</i><br>
 
 
 
+
 <br>
+
 
 
 
@@ -1045,7 +1103,9 @@ Political Economy</i><span style="font-family: Calibri;"> </span><br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;"><br>
+
 
 
 
@@ -1085,7 +1145,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br>
+
 
 
 
@@ -1119,6 +1181,7 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;">Permanent Working Papers:<br>
 
 
@@ -1136,7 +1199,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br style="font-weight: bold;">
+
 
 
 
@@ -1176,7 +1241,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </span></span><br>
+
 
 
 
@@ -1211,7 +1278,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </ul>
+
 
 
 
@@ -1246,7 +1315,9 @@ Working Papers</span></span><span style="color: rgb(33, 33, 33); font-family: Bi
 
 
 
+
 <br>
+
 
 
 
@@ -1283,7 +1354,9 @@ Evidence from the Philippines", with Ethan Ligon <br>
 
 
 
+
 <br>
+
 
 
 
@@ -1321,7 +1394,9 @@ Val&eacute;rie Orozco <br>
 
 
 
+
 <br>
+
 
 
 
@@ -1357,7 +1432,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 &nbsp;<br>
+
 
 
 
@@ -1392,7 +1469,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 </ul>
+
 
 
 
